--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -187,6 +187,8 @@ http://ionicframework.com/docs/theming/ */
     --ion-item-background: #000000;
 
     --ion-card-background: #1c1c1d;
+    --ion-toolbar-background: #000;
+    --ion-background-color-rgb: 0, 0, 0;
   }
 
   .ios ion-modal {
