--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,9 @@
 //
 
+:root {
+  color-scheme: dark;
+}
+
 // html {
 // font-size: 16px;
 // }
@@ -19,7 +23,7 @@ p {
 
 b,
 strong {
-  font-weight: 500;
+  font-weight: 700;
 }
 
 // IONIC OVERRIDES
