--- a/src/pages/login/index.scss
+++ b/src/pages/login/index.scss
@@ -1,7 +1,7 @@
-.ion-page {
-  justify-content: center;
-  align-items: center;
-}
+// .ion-page {
+//   justify-content: center;
+//   align-items: center;
+// }
 
 .logo {
   display: flex;
